Mon Mar  8 22:29:08 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * performance-tests/Bench/doc/images/bidirtest.jpg:
        * performance-tests/Bench/doc/images/latencytest.jpg:
        * performance-tests/Bench/doc/images/pubboundtest.jpg:
        * performance-tests/Bench/doc/images/subboundtest.jpg:

          Added more diagrams to user guide.  JPEG format is actually
          more compact for these diagrams, so convert the existing one to
          that format as well.

        * performance-tests/Bench/doc/userguide.html:

          Updated existing test descriptions and stubbed the data
          reduction and visualization sections.

        * performance-tests/Bench/doc/images/latencytest.png:

          Removed this file.

Mon Mar  8 19:01:09 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * NEWS:
        * README:

          Updated documentation for next release.

Sat Mar  6 19:16:09 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * dds/DdsDcps.mpc:

          Removed ccm base project, gives a hard dependency on CIAO,
          have to solve this differently

Sat Mar  6 06:47:09 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * dds/DdsDcps.mpc:

          Added needed base project for ccm lem library

Fri Mar  5 23:29:38 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * performance-tests/Bench/bin/run_test:

          Added ability to simply tailor statistics gathering commands by
          system type.  This was necessitated after discovering that the
          solaris environment did not support several of the command
          options used.

        * performance-tests/Bench/doc/userguide.html:
        * performance-tests/Bench/doc/images/latencytest.png:

          Minor updates from review comments (Scott).

Fri Mar  5 14:34:08 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * tools/odds_dissector/odds_packet.cpp:
