@@ -1,8 +1,8 @@
-This is OpenDDS version 2.1, released Fri Feb  5 21:47:14 UTC 2010.
+This is OpenDDS version 2.1.1, released Tue Mar  9 08:08:06 UTC 2010.
 
 8<----------8<----------8<----------8<----------8<----------8<----------8<----
 
-    OpenDDS VERSION: 2.1
+    OpenDDS VERSION: 2.1.1
     TAO VERSION:
 
     HOST MACHINE and OPERATING SYSTEM:
