@@ -1,4 +1,4 @@
-This is OpenDDS version 2.1, released Fri Feb  5 21:47:14 UTC 2010.
+This is OpenDDS version 2.1.1, released Tue Mar  9 08:08:06 UTC 2010.
 
 This software is open source and free of licensing fees.  See the
 LICENSE file (in this directory) for license details.
