@@ -9,5 +9,5 @@
 
 #define DDS_MAJOR_VERSION 2
 #define DDS_MINOR_VERSION 1
-#define DDS_MICRO_VERSION 0
-#define DDS_VERSION "2.1"
+#define DDS_MICRO_VERSION 1
+#define DDS_VERSION "2.1.1"
