@@ -1,3 +1,7 @@
+Tue Mar  9 08:08:06 UTC 2010  Trevor Fields  <fields_t@ociweb.com>
+
+        * OpenDDS version 2.1.1 released.
+
 Mon Mar  8 22:29:08 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>
 
         * performance-tests/Bench/doc/images/bidirtest.jpg:
